--- a/index.html
+++ b/index.html
@@ -4,21 +4,28 @@
   <meta charset="UTF-8">
   <title>Registro de Presença DeMolay</title>
   <style>
-    body {
-      margin: 0;
-      padding: 0;
-      height: 100vh;
-      background:
-        linear-gradient(135deg, #2b2b2b, #4a0000),
-        url('https://www.toptal.com/designers/subtlepatterns/uploads/stardust.png');
-      background-size: cover;
-      background-attachment: fixed;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      position: relative;
-    }
+    
+    html, body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  min-height: 100dvh;
+  height: 100%;
+  background:
+    linear-gradient(135deg, #2b2b2b, #4a0000),
+    url('https://www.toptal.com/designers/subtlepatterns/uploads/stardust.png');
+  background-size: cover;
+  background-attachment: fixed;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
 
     form {
       position: relative;
